# chainsaw-bot

./: README.md  package.json  pnpm-lock.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240511_162210_init.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  prelude.rs  state.rs  utils.rs
src-tauri/src/command/: discord.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/discord/: command.rs  mod.rs
src/lib/: commands.ts
types/autogenerated/: components.d.ts
