[package]
name = "migration"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "tokio1"]

[dependencies.sea-orm-migration]
version = "0.12.15"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
